# SPELACEW

SpeLACEW/: pyproject.toml
SpeLACEW/spelacew/: __init__.py  main.py
SpeLACEW/spelacew.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
