[project]
name = "spelacew"
version = "0.1.0"
description = "Interactive spectral line fitting and Equivalent Width measurement tool"
authors = [
    {name = "Daniel Perez"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "PyAstronomy"
    "pypdf"
]

[project.scripts]
spelacew = "spelacew.main:EW.run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
